--- a/assets/app.css
+++ b/assets/app.css
@@ -19,7 +19,6 @@
     justify-content: center;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
 }
 
 .page-loader__spinner {
@@ -211,6 +210,7 @@ body,
     padding: 0px;
     font-family: 'Antonio';
     color: white;
+    background-color: #000;
 }
 
 /* Navbar */
@@ -238,26 +238,6 @@ body,
     display: inline-block;
 }
 
-.proposta {
-    text-align: center;
-    margin-top: 45px;
-    font-size: 25px
-}
-
-.caixa-caixas-p-evento {
-    margin: 40px 40px 30px;
-}
-
-.caixa-p-evento {
-    text-align: center;
-    display: inline-block;
-    width: 33%;
-}
-
-.p-evento {
-    padding: 50px 30px 40px 30px;
-}
-
 .nav-link {
     color: white;
 }
@@ -274,16 +254,7 @@ body,
     height: 100%;
 }
 
-.background01,
-.background02,
-.background03 {
-    width: 100%;
-    height: 100%;
-}
-
-
 /* Background 01 */
-
 .background01-slide01,
 .background01-slide02,
 .background01-slide03 {
@@ -330,7 +301,7 @@ body,
 
 /* Background02 */
 .background02 {
-    height: 480px;
+    height: 380px;
     width: 100%;
     background-color: #000;
 }
@@ -344,7 +315,7 @@ body,
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-    margin-top: -2.5%;
+    /* margin-top: -2.5%; */
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -356,9 +327,9 @@ body,
 }
 
 @media (max-width: 1350px) {
-    .background03-container-background {
+    /* .background03-container-background {
         margin-top: -35px;
-    }
+    } */
 }
 
 
@@ -373,18 +344,18 @@ body,
 }
 
 /* Background 04 */
-.videos {
-    background-color: rgba(143, 0, 8, 255);
+.background04 {
     display: flex;
-    height: 100vh;
+    background-color: rgba(143, 0, 8, 255);
 }
 
-.container-videos {
-    border: 2px solid black;
+.background04-container-background {
     margin: auto;
+    max-width: 85%;
+    max-height: 90%;
 }
 
-.imagem-abc {
-    position: relative;
-    height: auto;
+#background04-tab-content img {
+    width: 100%;
+    height: 100%;
 }
