--- a/assets/app.css
+++ b/assets/app.css
@@ -210,8 +210,10 @@ body,
     padding: 0px;
     font-family: 'Antonio';
     color: white;
-    background-color: #00030b;
+    background-color: #000;
     letter-spacing: 0.1px;
+    max-width: 97%;
+    margin: 0 auto;
 }
 
 h1,h2,h3,h4,h5,h6,p,button,a{
@@ -354,7 +356,7 @@ h1,h2,h3,h4,h5,h6,p,button,a{
     font-weight: 700;
     text-shadow: -2px 2px 1px rgba(0, 0, 0, 0.4);
     color: white;
-    font-size: 35px;
+    font-size: 25px;
 }
 
 @media (max-width: 768px) {
@@ -427,6 +429,7 @@ h1,h2,h3,h4,h5,h6,p,button,a{
         margin-top: -35px;
     }
     */
+    
 }
 
 
@@ -481,18 +484,6 @@ h1,h2,h3,h4,h5,h6,p,button,a{
         position: absolute;
 }
 
-.background05-slide01 {
-    background-position: 0% 0%;
-    background-image: url("/assets/img/topo-1.png");
-}
-
-.background05-slide02 {
-    background-image: url("/assets/img/topo-1.png");
-}
-
-.background05-slide03 {
-    background-image: url("/assets/img/topo-1.png");
-}
 
 .background05-slide01-text {
     margin-top: 20rem;
@@ -620,24 +611,36 @@ h1,h2,h3,h4,h5,h6,p,button,a{
 
 .background07-slide01 {
     background-position: 0% 0%;
-    background-image: url("/assets/img/topo-1.png");
+    background-size: cover;
+    background-image: url("/assets/img/7-1.png");
 }
 
 .background07-slide02 {
-    background-image: url("/assets/img/topo-1.png");
+    background-position: 0% 0%;
+    background-size: cover;
+    background-image: url("/assets/img/7-2.png");
 }
 
 .background07-slide03 {
-    background-image: url("/assets/img/topo-1.png");
+    background-image: url("/assets/img/7-3.png");
 }
 
 .background07-slide01-text {
-    margin-top: 20rem;
-    margin-left: 140px;
+    margin-top: 10rem;
+    margin-left: 120px;
     justify-content: center;
+
 }
 
-.bck07-slide01-text-p {
+ .logoparceiro{
+    width: 100%;
+    max-height: 200px;
+    max-width: 200px;
+    vertical-align: middle;
+    margin: 0 10px;
+ }
+
+.bck07-slide01-text-p,.bck07-slide07-text-p {
     font-weight: 700;
     text-shadow: -2px 2px 1px rgba(0, 0, 0, 0.4);
     color: white;
@@ -696,5 +699,4 @@ h1,h2,h3,h4,h5,h6,p,button,a{
     color: white;
     background-color: #1a4c6e
 }
-
 
