--- a/assets/app.css
+++ b/assets/app.css
@@ -496,6 +496,7 @@ h1,h2,h3,h4,h5,h6,p,button,a{
     text-shadow: -2px 2px 1px rgba(0, 0, 0, 0.4);
     color: white;
     font-size: 35px;
+    z-index: 1000;
 }
 
 
